# ftof_hiepa

./: .gitignore  CMakeLists.txt  README.md  fTOFhiepa.cc  run.mac  vis.mac
include/: EventDataStructure.hh  HitDataStructure.hh  MagneticField.hh  backgroundGen.hh  crtConst.hh  crtTrk.hh  fTOFConst.hh  fTOF_DetectorConstruction.hh  fTOF_EventAction.hh  fTOF_Hit.hh  fTOF_PhysicsList.hh  fTOF_PrimaryGeneratorAction.hh  fTOF_RunAction.hh  fTOF_SensitiveDetector.hh  fTOF_StackingAction.hh  fTOF_SteppingAction.hh  fTOF_SteppingVerbose.hh  fTOF_TrackInformation.hh  fTOF_TrackingAction.hh  fTOF_VolumeStructures.hh  muonGen.hh  plane.hh
src/: MagneticField.cc  backgroundGen.cc  crtTrk.cc  fTOF_DetectorConstruction.cc  fTOF_EventAction.cc  fTOF_Hit.cc  fTOF_PhysicsList.cc  fTOF_PrimaryGeneratorAction.cc  fTOF_RunAction.cc  fTOF_SensitiveDetector.cc  fTOF_StackingAction.cc  fTOF_SteppingAction.cc  fTOF_SteppingVerbose.cc  fTOF_TrackInformation.cc  fTOF_TrackingAction.cc  muonGen.cc  plane.cc
